# video_player

./: Cargo.toml
src/: core.rs  main.rs  ui.rs
